new notebook for twitter data tranformation, new data, update readme

--- a/edd_ex_mod4_twitter2.ipynb
+++ b/edd_ex_mod4_twitter2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7a5966a2-1063-48e2-8fe1-fde4b8b0d415",
    "metadata": {},
    "outputs": [
@@ -26,8 +26,16 @@
    ],
    "source": [
     "# Running the get_tweets script with a preset timeout\n",
-    "!python get_tweets.py 10 \"#covid\""
+    "!python get_tweets.py 300 \"Biden\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e658498c-019b-4490-b654-6d836eff86b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
