enem data extraction and exploration (tp), minor changes to files, update readme

--- a/edd_ex_mod4_twitter.ipynb
+++ b/edd_ex_mod4_twitter.ipynb
@@ -106,7 +106,10 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "f1d7124d-dfda-40ec-a74f-86854ee18e22",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
